frontend/tests/cases/positive/interfaces/syntax/synConstraintMultiparam.gr
interface Multiparam a b

-- Constraint with multi-parameter application
instance {Multiparam b a} => Multiparam a b
