frontend/tests/cases/negative/badTyInInterfaceConstraint.gr
-- 'a -> b' is not a valid constraint
interface {a -> b} => Simple a where
  simple : a -> a
